--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,24 @@
 language: android
 android:
   components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
-    # - platform-tools
-    # - tools
-
-    # The BuildTools version used by your project
+    - tools
     - build-tools-23.0.2
-
-    # The SDK version used to compile your project
     - android-23
+    - platform-tools
 
-    # Additional components
-    - extra-google-google_play_services
-    - extra-google-m2repository
-    - extra-android-m2repository
-    - addon-google_apis-google-19
+sudo: false
 
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-19
-    - sys-img-x86-android-17
+before_script:
+  - chmod +x gradlew
+
+script:
+  - ./gradlew assembleDebug --stacktrace
+
+deploy:
+  provider: releases
+  api-key: $GITHUB_APIKEY
+  file: "app/build/outputs/apk/app-debug.apk"
+  skip_cleanup: true
+  on:
+    tags: true
+    all_branches: true
