--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,5 @@
-language: android
 android:
   components:
-    - tools
-    - build-tools-23.0.2
+    - build-tools-22.0.1
     - android-23
-    - platform-tools
-
-sudo: false
-
-before_script:
-  - chmod +x gradlew
-
-script:
-  - ./gradlew assembleDebug --stacktrace
-
-deploy:
-  provider: releases
-  api-key: $GITHUB_APIKEY
-  file: "app/build/outputs/apk/app-debug.apk"
-  skip_cleanup: true
-  on:
-    tags: true
-    all_branches: true
+    - extra-android-m2repository
